--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-# Ignore Gradle project-specific cache directory
-.gradle
+# build
 
-# Ignore Gradle build output directory
-build
+.gradle/
+build/
+*.gradle
+*.jar
+*.war
+gradle-*
+gradlew
+gradlew.bat
 
-!gradle/wrapper/gradle-wrapper.jar
+practise-1/.gradle
+practise-1/build/
+!practise-1/gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 !**/src/main/**/out/
