--- a/practice/practise-2/.gitignore
+++ b/practice/practise-2/.gitignore
@@ -1,27 +1,39 @@
-# Ignore Gradle project-specific cache directory
-.gradle
-
-# Ignore Gradle build output directory
-build
-
-!gradle/wrapper/gradle-wrapper.jar
+practise-2/.gradle
+practise-2/build/
+!practise-2/gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-!**/src/main/**/out/
-!**/src/test/**/out/
-**/logs/
-.settings
-bin
-.project*
-.classpath
-.factorypath
-out/
 
 ### IntelliJ IDEA ###
-.idea/
+practise-2/.idea/modules.xml
+practise-2/.idea/jarRepositories.xml
+practise-2/.idea/compiler.xml
+practise-2/.idea/libraries/
 *.iws
 *.iml
 *.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
 
 ### VS Code ###
 .vscode/
