--- a/practice/practise-12/docker-compose.yml
+++ b/practice/practise-12/docker-compose.yml
@@ -16,19 +16,19 @@ services:
       timeout: 5s
       retries: 5
 
-#  app:
-#    build: .
-#    container_name: car_app
-#    environment:
-#      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/car_db
-#      SPRING_DATASOURCE_USERNAME: postgres
-#      SPRING_DATASOURCE_PASSWORD: postgres
-#      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      postgres:
-#        condition: service_healthy
+  app:
+    build: .
+    container_name: car_app
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/car_db
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    ports:
+      - "8080:8080"
+    depends_on:
+      postgres:
+        condition: service_healthy
 
 volumes:
   postgres_data:
