--- a/practice/practise-12/src/main/resources/db/changelog/release_0_1/1744445365.create-table-customer.yaml
+++ b/practice/practise-12/src/main/resources/db/changelog/release_0_1/1744445365.create-table-customer.yaml
@@ -12,10 +12,12 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
-
               - column:
                   name: name
                   type: VARCHAR(255)
+                  constraints:
+                    unique: true
+                    nullable: false
               - column:
                   name: leg_power
                   type: INTEGER
