--- a/practice/practise-12/src/main/resources/db/changelog/release_0_1/1744444970.create-table-car.yaml
+++ b/practice/practise-12/src/main/resources/db/changelog/release_0_1/1744444970.create-table-car.yaml
@@ -13,8 +13,11 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
               - column:
-                  name: type
+                  name: engine_type
                   type: VARCHAR(50)
+              - column:
+                  name: size
+                  type: INT
 
         - createTable:
             tableName: cars
