--- a/practice/practise-13/src/main/resources/application.yml
+++ b/practice/practise-13/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 #    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: none
 #      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
@@ -22,4 +22,4 @@ spring:
     enabled: true
     change-log: classpath:db/changelog/db.changelog-master.yaml
 server:
-  port: 8080
+  port: 8081
