--- a/practice/practise-13/src/main/resources/application.yml
+++ b/practice/practise-13/src/main/resources/application.yml
@@ -1,25 +1,11 @@
-spring:
-  application:
-    name: kpo-app
-  datasource:
-    url: jdbc:postgresql://localhost:5432/car_db
-    username: postgres
-    password: postgres
-#    url: ${SPRING_DATASOURCE_URL}
-#    username: ${SPRING_DATASOURCE_USERNAME}
-#    password: ${SPRING_DATASOURCE_PASSWORD}
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: false
-    hibernate:
-      ddl-auto: none
-#      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-  liquibase:
-    enabled: true
-    change-log: classpath:db/changelog/db.changelog-master.yaml
-server:
-  port: 8081
+grpc:
+  client:
+    report-service:
+      address: 'static://localhost:9090' # Порт grpc основного приложения
+      negotiation-type: plaintext
+
+telegram:
+  bot:
+    username: test12312332199901_bot
+    token: 7881565931:AAGRjSIuf0duTwPzkRinLhYBWMBoRncg_to
+    chat-id: 895736614
