add kafka to practise 14
- add kafka

--- a/practice/practise-14/src/main/resources/application.yml
+++ b/practice/practise-14/src/main/resources/application.yml
@@ -21,5 +21,21 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/db.changelog-master.yaml
+  kafka:
+    bootstrap-servers: localhost:29092
+    properties:
+      security.protocol: PLAINTEXT
+#      socket.connection.setup.timeout.ms: 30000
+    admin:
+      auto-create-topics: true
+    consumer:
+      group-id: kpo
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "hse.kpo,java.util,java.lang"
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 server:
   port: 8081
