--- a/practice/hw/bighw2/src/storage/src/main/resources/application.yml
+++ b/practice/hw/bighw2/src/storage/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: storage
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -8,7 +10,5 @@ spring:
       hibernate:
         ddl-auto: create-drop
       show-sql: true
-  application:
-    name: gateway
 server:
-  port: 8080
+  port: 8081
