--- a/practice/hw/bighw2/src/storage/src/main/resources/application.yml
+++ b/practice/hw/bighw2/src/storage/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     password: postgres
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
