--- a/practice/hw/bighw2/src/storage/src/main/resources/application.yml
+++ b/practice/hw/bighw2/src/storage/src/main/resources/application.yml
@@ -14,3 +14,5 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 server:
   port: 8081
+  use-forward-headers: true
+  forward-headers-strategy: framework
