--- a/practice/hw/bighw2/src/analysis/src/main/resources/application.yml
+++ b/practice/hw/bighw2/src/analysis/src/main/resources/application.yml
@@ -5,3 +5,6 @@ server:
   port: 8082
   use-forward-headers: true
   forward-headers-strategy: framework
+springdoc:
+  api-docs:
+    path: /api/analysis
