--- a/practice/hw/bighw2/src/storage/src/main/resources/application.yml
+++ b/practice/hw/bighw2/src/storage/src/main/resources/application.yml
@@ -16,3 +16,6 @@ server:
   port: 8081
   use-forward-headers: true
   forward-headers-strategy: framework
+springdoc:
+  api-docs:
+    path: /api/files
