--- a/practice/hw/bighw2/src/analysis/src/main/resources/application.yml
+++ b/practice/hw/bighw2/src/analysis/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: analysis
 server:
-  port: 8082
+  port: 8080
   use-forward-headers: true
   forward-headers-strategy: framework
 springdoc:
   api-docs:
-    path: /api/analysis
+    path: /api
