--- a/practice/practise-19/.github/workflows/ci.yml
+++ b/practice/practise-19/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-java@v4
         with:
           java-version: '21'
@@ -23,17 +25,17 @@ jobs:
         run: ./gradlew checkstyleMain checkstyleTest
       - name: Run Unit Tests with Coverage
         run: ./gradlew test jacocoTestReport
+      - name: Upload Checkstyle Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkstyle-report
+          path: build/reports/checkstyle
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      - name: Upload Checkstyle Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: checkstyle-report
-          path: build/reports/checkstyle
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -43,7 +45,7 @@ jobs:
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar --info
+        run: ./gradlew build sonar --info
   docker-build:
     name: Build Docker Image
     runs-on: ubuntu-latest
