--- a/practice/practise-19/.github/workflows/ci.yml
+++ b/practice/practise-19/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
 name: Java CI
 
 on:
-  - push
-  - pull_request
+  push:
+    branches: [ "**" ]
+  pull_request:
+    branches: [ "**" ]
 
 jobs:
   analyze:
