--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "**" ]
 
+env:
+  PROJECT_DIR: "practise/practise-19"
+
 jobs:
   analyze:
     runs-on: ubuntu-latest
@@ -17,6 +20,10 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+      - name: Navigate to project directory
+        run: cd ${{ env.PROJECT_DIR }}
+        shell: bash
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
@@ -69,6 +76,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ${{ env.PROJECT_DIR }}
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/your-image-name:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}
