--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Java CI/CD Pipeline
 
 on:
   push:
@@ -16,45 +16,56 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-      - name: Navigate to project directory
-        run: cd ${{ env.PROJECT_DIR }}
-        shell: bash
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
-          fetch-depth: 0
+          working-directory: ${{ env.PROJECT_DIR }}  # Указываем рабочую директорию
+
+      # Все команды Gradle выполняем с явным указанием рабочей директории
       - name: Execute Gradle build
         run: ./gradlew build
+        working-directory: ${{ env.PROJECT_DIR }}  # Ключевое исправление!
+
       - name: Run Checkstyle
         run: ./gradlew checkstyleMain checkstyleTest
+        working-directory: ${{ env.PROJECT_DIR }}  # Выполняем в нужной директории
+
       - name: Run Unit Tests with Coverage
         run: ./gradlew test jacocoTestReport
+        working-directory: ${{ env.PROJECT_DIR }}
+
       - name: Upload Checkstyle Report
         uses: actions/upload-artifact@v4
         with:
           name: checkstyle-report
-          path: build/reports/checkstyle
+          path: ${{ env.PROJECT_DIR }}/build/reports/checkstyle
+
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
+
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
-      - name: Build and analyze
+
+      - name: Build and analyze with SonarCloud
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonar --info
+        run: ./gradlew sonar --info
+        working-directory: ${{ env.PROJECT_DIR }}  # Анализ в нужной директории
+
   docker-build:
     name: Build Docker Image
     runs-on: ubuntu-latest
